--- a/index.html
+++ b/index.html
@@ -1,29 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
-      http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <!-- tailwind stylesheet -->
-    <link href="./tailwind/output.css" rel="stylesheet">
-    <title>Evalu8</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
   </head>
-  <!-- This is the main content, the body, of the application. For now, I have 3 buttons that will be used -->
-  <!-- to navigate the application. -->
-  <body class="text-3xl font-bold bg-stone-700 text-white p-2 text-center w-full">
-    <h1>Evalu8</h1>
-    <div class="w-full flex font-bold text-sm justify-evenly py-12">
-      <!-- notice the classes, padding of 2, background colors, rounded edges, dropshadows -->
-      <button class="p-2 bg-red-700 hover:bg-red-600 rounded-lg shadow">Course Evaluations</button>
-      <button class="p-2 bg-red-700 hover:bg-red-600 rounded-lg shadow">Guest Speaker Evaluations</button>
-      <button class="p-2 bg-red-700 hover:bg-red-600 rounded-lg shadow">Module Grades</button>
-    </div>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
